--- a/apartmentRental/src/main/webapp/app/bower.json
+++ b/apartmentRental/src/main/webapp/app/bower.json
@@ -1,4 +1,4 @@
-{
+	{
   "name": "app",
   "version": "0.0.0",
   "authors": [
@@ -17,6 +17,7 @@
     "jquery": "~2.1.3",
     "bootstrap": "~3.3.2",
     "lodash":"3.4.0",
-    "angular-google-maps":"2.0.13"
+    "angular-google-maps":"2.0.13",
+	"ngAutocomplete":"1.0.0"
   }
 }
