Google maps autocomplete is now working on the home page.

--- a/apartmentRental/pom.xml
+++ b/apartmentRental/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>ee.booking</groupId>
-	<artifactId>apartmentBooking</artifactId>
-	<name>apartmentBooking</name>
+	<groupId>ee.rental</groupId>
+	<artifactId>apartmentRental</artifactId>
+	<name>apartmentRental</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<dependencyManagement>
@@ -90,6 +90,7 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.7.10</version>
 		</dependency>
+
 
 	</dependencies>
 </project>
