--- a/propertyRental/src/main/webapp/WEB-INF/web.xml
+++ b/propertyRental/src/main/webapp/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	<!-- For Jackson json (otherwise throws lazy init exception) -->
 	<filter>
 		<filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
-		<filter-class>org.springframework.orm.jpa.support.OpenEntityManagerInViewFilter</filter-class>
+		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
 	</filter>
 	<filter-mapping>
 		<filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
