--- a/propertyRental/src/main/webapp/WEB-INF/web.xml
+++ b/propertyRental/src/main/webapp/WEB-INF/web.xml
@@ -12,11 +12,11 @@
 	</listener>
 	<!-- For Jackson json (otherwise throws lazy init exception) -->
 	<filter>
-		<filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+		<filter-name>Spring OpenSessionInViewFilter</filter-name>
 		<filter-class>org.springframework.orm.hibernate4.support.OpenSessionInViewFilter</filter-class>
 	</filter>
 	<filter-mapping>
-		<filter-name>Spring OpenEntityManagerInViewFilter</filter-name>
+		<filter-name>Spring OpenSessionInViewFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<servlet>
