--- a/propertyRental/src/main/webapp/app/bower.json
+++ b/propertyRental/src/main/webapp/app/bower.json
@@ -20,6 +20,7 @@
     "angular-google-maps":"2.0.13",
 	"ngAutocomplete":"1.0.0",
     "angular-bootstrap-datetimepicker": "0.3.12",
-	"ng-file-upload":"3.2.4"
+	"ng-file-upload":"3.2.4",
+	"highcharts-ng":"0.0.8"
   }
 }
