--- a/propertyRental/pom.xml
+++ b/propertyRental/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ee.rental</groupId>
-	<artifactId>apartmentRental</artifactId>
-	<name>apartmentRental</name>
+	<artifactId>propertyRental</artifactId>
+	<name>propertyRental</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<dependencyManagement>
