--- a/propertyRental/src/main/webapp/WEB-INF/web.xml
+++ b/propertyRental/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
 	version="2.5">
+	<display-name>
+		Property rental system
+	</display-name>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>/WEB-INF/spring/root-context.xml</param-value>
