--- a/propertyRental/src/main/webapp/app/bower.json
+++ b/propertyRental/src/main/webapp/app/bower.json
@@ -1,9 +1,11 @@
 {
-  "name": "app",
+  "name": "Property rental system",
   "version": "0.0.0",
+  "homepage": "https://github.com/PrintScr/Property-rental-system",
   "authors": [
     "Stanislav <nazmutdinov@gmail.com>"
   ],
+  "license": "MIT",
   "ignore": [
     "**/.*",
     "node_modules",
@@ -12,16 +14,20 @@
     "tests"
   ],
   "dependencies": {
+	"angular":"1.3.15",
+    "angular-bootstrap": "~0.12.1",
+    "angular-mocks": "~1.3.15",
+    "angular-resource": "1.3.14",
     "angular-ui-router": "~0.2.13",
-    "angular": "1.3.15",
-    "jquery": "~2.1.3",
-    "bootstrap": "~3.3.2",
+    "highcharts-ng": "0.0.8",
     "lodash": "3.4.0",
+    "moment": "^2.9.0",
     "angular-google-maps": "2.0.13",
     "ngAutocomplete": "1.0.0",
-    "angular-bootstrap-datetimepicker": "0.3.12",
+    "jquery": "~2.1.3",
     "ng-file-upload": "3.2.4",
-    "highcharts-ng": "0.0.8",
+    "bootstrap": "~3.3.2",
+    "angular-bootstrap-datetimepicker": "0.3.12",
     "bootstrap-datepicker": "1.4.0"
   }
 }
